# uos-drilling-wh

./: .gitignore  CLAUDE.md  DEVELOPERS.md  Dockerfile  Dockerfile.cpu  Dockerfile.devel  Dockerfile.gpu  Dockerfile.local.cpu  Dockerfile.local.publisher  Dockerfile.publish  Dockerfile.publisher  Dockerfile.rpi.publisher  Dockerfile.runtime  GETTING_STARTED.md  Makefile  OVERVIEW.md  PORTAINER_MULTI_STACK_DEPLOYMENT.md  README.md  README2.md  REPOSITORY_LAYOUT.md  build-all.sh  build-cpu.sh  build-devel.sh  build-main.sh  build-publish.sh  build-publisher.sh  build-runtime.sh  build-wheel.sh  build_wheel.py  build_wheel.sh  clean-cache.sh  docker-compose.cpu-testing.yml  docker-compose.debug.yml  docker-compose.yml  requirements.gpu  requirements.txt  run-stress-test.sh  test_duplicate_behavior.py  test_duplicate_check.py  test_integration_duplicate_handling.py  (+1 more)
abyss/: MANIFEST.in  MATFILES.md  Makefile  README.md  build_wheel.py  build_wheel.sh  pyproject.toml  requirements.cpu  requirements.devcontainer  requirements.docker  requirements.txt  setup.py
abyss/.github/workflows/: build-wheel.yml
abyss/_sandbox/examples/: HAM_ingest_FAL_data.ipynb  matrix-profile-explore.ipynb
abyss/_sandbox/run/: listener-simple.py
abyss/docs/: CONFIGURATION_GUIDE.md  DAQ.md  Drilling_deployment_documentation_v0.2.2.docx  MQTT_ARCHITECTURE.md  PHASE1_IMPLEMENTATION_SUMMARY.md  exact_matching_fix.md
abyss/examples/: HAM_depth_estimation.ipynb  HAM_depth_estimation_mqtt.ipynb  MDB_mqtt-depth_estimation.ipynb  est-material-thickness.ipynb
abyss/examples-mqtt/: MDB_mqtt-depth_estimation.ipynb  listen-continuous.py  mqtt_conf.yaml  publish-continuous.py
abyss/examples/data/: 17070143_17070143_ST_1092_1.xls  20110019_20110019_ST_490_3.xls  MQTT_Curve_Info_20240304 14H26.csv
abyss/run/: join_separate_mqtt.py  listen-continuous.py  local.yaml  mqtt_conf.yaml  mqtt_localhost_conf.yaml  publish-continuous.py
abyss/run-copy/: MDB_mqtt-depth_estimation.ipynb  mqtt-publisher.py  mqtt_conf.yaml
abyss/run-copy/archive/: listen-continuous.py
abyss/run/archive/: MDB_mqtt-depth_estimation.ipynb
abyss/sandbox/: visualise_ham_production.ipynb
abyss/sandbox/examples/: HAM_ingest_xls_to_dataframe.py  est-material-thickness-HAM.ipynb
abyss/sandbox/examples-mqtt/: MDB_mqtt-depth_estimation.ipynb
abyss/sandbox/mqtt_correlation/: requirements.txt  try_aiomqtt.py
abyss/sandbox/run/: publish-continuous.py
abyss/sandbox/validation/: add_filename_to_image.ipynb
abyss/src/abyss/: __init__copy__.py  cleanup_template.py  daqpca.py  dataparser.py  dtw_shaplet.py  energy_estimation.py  energy_estimation_v2.py  factory.py  filters.py  final_depth_testing.py  final_depth_testing_whx.py  find_opt_smoothing.py  gripcodecalc.py  holes_3d_plot.py  inference.py  ingest_xls.py  lueberring_dest.py  modelling.py  parse_notes.py  plotting.py  process_hamburg.py  rolling_gradient.py  setitec_adjust_bps.py  setitecstepcodes.py  toolcodes.py  uos_depth_est.py  uos_depth_est_core.py  uos_depth_est_old.py  uos_depth_est_refactor.py  uos_depth_est_utils.py  uos_inference.py
abyss/test_data/HAM_lower/: E00401006B6B2977_113-V3-022_ST_2194_64.xls  E00401006B6B2977_113-V3-022_ST_2195_65.xls
abyss/test_data/TUHH/: to_parquet.ipynb
abyss/test_data/UNK/: 2312041_23120041_ST_1378_95.xls  E0025C639508824D_P6TL-INT_ST_339_460.xls  E00401008506DBD6_ST00234275_ST_27917_11978.xls  (+5 more)
abyss/tests/: README.md  README_TEST_STRATEGY.md  TEST_MIGRATION_CHECKLIST.md  __init__.py  conftest.py  migrate_tests.py  test_comprehensive_config_manager.py  test_config_manager_integration.py  test_confighandler.py  test_correlation.py  test_correlator_performance.py  test_duplicate_behavior.py  test_exception_based_error_handling.py  test_head_id_extraction.py  test_head_id_inclusion.py  test_improved_duplicate_check.py  test_integration.py  test_integration_duplicate_handling.py  test_message_processor_heads_id.py  test_models.py  test_mqtt.py  test_processing.py  test_processing_pool_integration.py  test_processing_pool_simple.py  test_result_publisher.py  test_result_publisher_head_id.py  test_simple_correlator.py  test_uos_depth_est.py  test_uos_depth_est_core.py  test_uos_depth_est_utils.py  test_uos_inference.py  test_uos_publish_json.py
abyss/wheels/: README.md  accelerate-1.2.1-py3-none-any.whl  requirements.txt  tsfm_public-0.2.17-py3-none-any.whl
(+1384 files in other folders)
