[build-system]
requires = ["setuptools>=60", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abyss"
version = "0.2.3"
authors = [
    {name = "Digital Manufacturing Group - University of Sheffield", email = "w.hutabarat@sheffield.ac.uk"},
]
description = "Electric drill data processing"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[project.urls]
"Homepage" = "https://github.airbus.corp/Airbus/uos-drilling"
"Bug Tracker" = "https://github.airbus.corp/Airbus/uos-drilling/issues"

[project.scripts]
uos_depthest_listener = "abyss.run.listen_continuous:main"
uos_depthest_xls = "abyss.run.uos_depth_est_xls:main"
uos_depthest_json = "abyss.run.uos_depth_est_json:main"
uos_publish_json = "abyss.run.uos_publish_json:main"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["../abyss/trained_model/**/*"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
